Tuesday, 13th May 2003, Ron Steinke <rsteinke@w-link.net>

	* Gave the perl bindings better memory management.
	  The biggest change is that rooms are now passed
	  around as a lobby pointer and id string, so we
	  don't get seg faults if room references go stale.
	  Most of the rest is incrementing/decrementing
	  the refcounts of the perl SV's that own Connection
	  and Player instances.
	* Added some getConnection()/getLobby()/getPlayer()
	  accessors to various classes, as needed for the
	  above memory management code.
	* Added an Interface class, for the beginning
	  of incorporating handling of the soon-to-be-defined
	  Atlas interface ops (old janus functionality).

Saturday, 10th May 2003, Al Riddoch <alriddoch@zepler.org>

	* Incremented version to 0.9.8.1 for a patch release with
	  working perl bindings.

Saturday, 10th May 2003, Ron Steinke <rsteinke@w-link.net>

	* Changed perl bindings build stuff to account
	  for the @WFMATH_CFLAGS@ @ATLAS_CFLAGS@ -> @WF_CFLAGS@
	  change
	* Added a check for the SigC module to the check for
	  the sigcperl lib in configure.in
	* Got rid of OLD_SIGC_1_0 stuff in bindings, since we're
	  now requiring libsigc++ 1.2

Friday, 9th May 2003, James Turner <james@worldforge.org>

	* Incremented version to 0.9.8 for stable release.

Thursday, 8th May 2003, Ron Steinke

	* Changed Al's mkdir -p fix in bindings/Makefile.am
	  to test -d || mkdir, since that's the way autoconf
	  does it and it's sure to be portable.

Thursday, 8th May 2003, James Turner <james@worldforge.org>
	
	* Don't make or install eris-config, eris.m4 or 
	  eris-config.1 (the man page). The actual files are still
	  there, will be removed fairly sooon.

Thursday, 8th May 2003, Al Riddoch <alriddoch@zepler.org>

	* Use $(top_buildir) to refer to the top of the build structure,
	  and remove reference to old src dir from test Makefile.

Thursday, 8th May 2003, Al Riddoch <alriddoch@zepler.org>

	* Re-order configure.in so the version variable works.
