@@ -1,5 +1,14 @@
 Tuesday, 13th May 2003, Ron Steinke <rsteinke@w-link.net>
 
+	* More perl bindings memory management stuff,
+	  primarily handling the World::Destroyed signal.
+	* Used templates to simplify the perl typemap
+	  stuff a bit, changed the #includes in the modules
+	  to only include the type conversion code
+	  each needs.
+
+Tuesday, 13th May 2003, Ron Steinke <rsteinke@w-link.net>
+
 	* Gave the perl bindings better memory management.
 	  The biggest change is that rooms are now passed
 	  around as a lobby pointer and id string, so we
